# UniManageAPI

./: .gitignore  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yaml  pyproject.toml  requirements.txt
app/: config.py  database.py  datavalidation.py  main.py
app/routers/: courseregister.py  courses.py  front_page.py  lecturer.py  presentedcourses.py  student.py
app/schemas/: courseregister.py  courses.py  lecturer.py  presentedcourses.py  student.py
app/templates/: delete.html  get.html  get_for_update.html  index.html  layout.html  temp.css  update.html
app/tests/: crud_test.py  datavalidation_test.py  fastapi_test.py
nginx/: Dockerfile  fullchain.pem  nginx.conf  privkey.pem
nginx/static/css/: main.css
